// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Badge with custom className 1`] = `
<span
  className="width-auto custom-class badge rounded-pill bg-primary"
  variant="secondary"
  varroleiant="default"
/>
`;

exports[`renders default Badge 1`] = `
<span
  className="width-auto badge rounded-pill bg-primary"
  variant="secondary"
  varroleiant="default"
/>
`;
